tests/baselines/reference/structConstructorOverloadsWithDefaultValues_basic.errors.txt
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorOverloadsWithDefaultValues_basic.ts(3,8): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorOverloadsWithDefaultValues_basic.ts(5,17): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorOverloadsWithDefaultValues_basic.ts(10,8): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorOverloadsWithDefaultValues_basic.ts(19,17): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorOverloadsWithDefaultValues_basic.ts (4 errors) ====
    // A parameter initializer is only allowed in a function or constructor implementation
    
    struct C {
           ~
!!! error TS2300: Duplicate identifier 'C'.
        foo: string;
        constructor(x = 1); // error
                    ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
        constructor() {
        }
    }
    
    struct C {
           ~
!!! error TS2300: Duplicate identifier 'C'.
    	foo: string;
    	constructor();
    	constructor(x = 1) { // ok
    	}
    }
    
    struct D<T> {
        foo: string;
        constructor(x = 1); // error
                    ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
        constructor() {
        }
    }